# cka-certification

./: .gitignore  LICENSE  README.md  cka-certification.code-workspace
.github/workflows/: docker-publish.yml
certification/1-core/: kubernetes_arquitecture.md
certification/2-workloads/2-replicaset/: README.md
certification/2-workloads/3-deployments/: DEPLOYMENTS.md  README.md
certification/2-workloads/4-daemonsets/: README.md
certification/2-workloads/5-assign-pods-nodes/: README.md
certification/2-workloads/5-assign-pods-nodes/examples/: example-nodeaffinity-hard-notin.yaml  example-nodeaffinity-hard.yaml  example-nodeaffinity-soft.yaml  example-nodeselector-1.yaml  pod-with-tolerations.yaml  requests-limits.yaml
certification/3-servicing&networking/: README.md
certification/3-servicing&networking/examples/code/backend/: Dockerfile  README.md  pyproject.toml
certification/3-servicing&networking/examples/code/backend/backend/: main.py
certification/3-servicing-and-networking/: README.md
certification/3-servicing-and-networking/examples/code/3-backend/: README.md
certification/3-servicing-and-networking/examples/code/3-frontend-example/: README.md  package-lock.json  package.json
certification/core/: kubernetes_arquitecture.md
infrastructure/: kubernetes.tf  provider.tf
infrastructure/001-kubernetes/: provider.tf
infrastructure/002-kubeadm/: .terraform.lock.hcl  droplets.tf  outputs.tf  provider.tf
infrastructure/003-scratch/: droplets.tf  outputs.tf  provider.tf
scripts/kubeadm/: kubeadm.master.sh  kubeadm.worker.sh
(+14 files in other folders)
