[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend example for the CKA certification."
authors = ["Alberto Iglesias <alberto@iglesias.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[tool.poetry.scripts]
start = "backend.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
